# beantextures

./: .gitignore  CONTRIBUTING.md  README.md  arch.py  build.sh  pyproject.toml
beantextures/: __init__.py  blender_manifest.toml  children.py  classes.py  constants.py  operators.py  ops_generation.py  ops_settings.py  panel.py  props_nodes.py  props_settings.py  ui_node_generator.py  ui_ops.py
beantextures/connector/: icon_picker.py  ops.py  panel.py  popup_menu.py  props.py  ui.py
