[tool.poetry]
name = "beantextures"
version = "0.1.0"
description = "Blender add-on which helps with animated textures"
authors = ["DaringCuteSeal <daringcuteseal@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
